# Bangla-Health-Paraphrase-Generation

./: .gitignore  Makefile  README.md  coding_agent_prompt.md  project_details.md  pyproject.toml  report.md  requirements.txt
configs/: experiment_config.yaml  log4j2.properties
configs/config/: experiment_config.yaml
configs/templates/: eda_report.html.j2  final_report.html.j2
notebooks/: 00_setup.ipynb  01_preprocess.ipynb  02_eda.ipynb  03_augmentation.ipynb  04_tokenize.ipynb  05_train_mt5_lora.ipynb  06_train_baselines.ipynb  07_results_visualization.ipynb  08_full_pipeline.ipynb
scripts/: run_augment.py  run_eda.py  run_evaluate.py  run_preprocess.py  run_train.py  setup_spark_windows.ps1  tasks.ps1
src/common/: checkpointing.py  config.py  logging.py  paths.py  reload.py  seed.py
src/data/: datamodule.py  tokenize.py
src/evaluation/: bertscore.py  evaluator.py  metrics.py  semantic.py
src/models/: mbart_baseline.py  mt5_baseline.py  mt5_lora.py
src/pipeline/: preprocess.py
src/reports/: eda_report.py  final_report.py
src/spark/: __init__.py  _runtime.py  augmentation.py  clean.py  deduplicate.py  eda.py  feature_engineering.py  ingest.py  session.py  validate.py
src/training/: callbacks.py  memory_probe.py  schedules.py  trainer.py
src/visualization/: plots.py  results_plots.py  tables.py
tests/: test_augmentation.py  test_common.py  test_metrics.py  test_smoke.py  test_spark.py
